--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header id="header">
         <nav>
             <div class="logo">
-                <img src="LDW_logo_small.png" alt="LDW Studio Logo">
+                <img src="https://github.com/ldwstudio/ldwstudio.github.io/blob/main/LDW_logo_small.png alt="LDW Studio Logo"">
             </div>
             <ul>
                 <li><a href="#home">Home</a></li>
