--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header id="header">
         <nav>
             <div class="logo">
-                <img src="LDW_logo_small.png" alt="LDW Studio Logo" style="height: 40px;">
+                <img src="https://ldwstudio.github.io/LDW_logo_small.png" alt="LDW Studio Logo" style="height: 40px;">
             </div>
             <ul>
                 <li><a href="#home">Home</a></li>
