--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <section id="demo-cta" class="fade-in">
         <div class="container">
             <h2>Vuoi vedere un esempio di landing page realizzata da LDW Studio?</h2>
-            <a href="https://ldwstudio.github.io/vetrina-shopify/" class="cta-button" target="_blank">Visualizza Demo Shopify</a>
+            <a href="https://ldwstudio.github.io/vetrina-ecommerce/" class="cta-button" target="_blank">Visualizza Demo Shopify</a>
         </div>
     </section>
 
@@ -91,12 +91,12 @@
             <h2>Clienti Soddisfatti</h2>
             <div class="testimonials-carousel">
                 <div class="testimonial active">
-                    <p>"LDW Studio ha trasformato completamente la nostra presenza online. Professionalità e risultati eccezionali."</p>
-                    <cite>Marco Rossi, CEO TechCorp</cite>
+                    <p>"LDW Studio ha migliorato di molto la nostra presenza online. Professionalità e risultati top!"</p>
+                    <cite>Lorenzo, Shop Arredamento</cite>
                 </div>
                 <div class="testimonial">
-                    <p>"Un team incredibile che ha saputo capire e realizzare esattamente ciò di cui avevamo bisogno."</p>
-                    <cite>Laura Bianchi, Marketing Manager</cite>
+                    <p>"Ha saputo comprendere e realizzare esattamente ciò di cui avevamo bisogno. Grazie"</p>
+                    <cite>Roberta, Negozio Prodotti Naturali</cite>
                 </div>
             </div>
         </div>
