--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <section id="demo-cta" class="fade-in">
         <div class="container">
             <h2>Vuoi vedere un esempio di landing page realizzata da LDW Studio?</h2>
-            <a href="https://ldwstudio.github.io/vetrina-ecommerce/" class="cta-button" target="_blank">Visualizza Demo Shopify</a>
+            <a href="https://ldwstudio.github.io/vetrina-ecommerce/" class="cta-button" target="_blank">Guarda come potrebbe essere il tuo e-commerce!</a>
         </div>
     </section>
 
