--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
             <div class="logo">
                 <img src="https://ldwstudio.github.io/LDW_logo_small.png" alt="LDW Studio Logo" style="height: 40px;">
             </div>
-            <ul>
+             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#services">Servizi</a></li>
                 <li><a href="#why-us">Perché Noi</a></li>
                 <li><a href="#testimonials">Testimonianze</a></li>
-                <li><a href="#contact" class="cta-button">Contattaci</a></li>
             </ul>
         </nav>
     </header>
@@ -82,7 +81,7 @@
     <section id="demo-cta" class="fade-in">
         <div class="container">
             <h2>Vuoi vedere un esempio di landing page realizzata da LDW Studio?</h2>
-            <a href="https://ldwstudio.github.io/vetrina-ecommerce/" class="cta-button" target="_blank">Guarda come potrebbe essere il tuo e-commerce!</a>
+            <a href="https://ldwstudio.github.io/vetrina-ecommerce/" class="cta-button" target="_blank">Visualizza Demo Shopify</a>
         </div>
     </section>
 
@@ -92,7 +91,7 @@
             <div class="testimonials-carousel">
                 <div class="testimonial active">
                     <p>"LDW Studio ha migliorato di molto la nostra presenza online. Professionalità e risultati top!"</p>
-                    <cite>Lorenzo, Shop Arredamento</cite>
+                    <cite>Lorenzo, Shop Abbigliamento</cite>
                 </div>
                 <div class="testimonial">
                     <p>"Ha saputo comprendere e realizzare esattamente ciò di cui avevamo bisogno. Grazie"</p>
@@ -117,6 +116,12 @@
         </div>
     </footer>
 
+    <div class="floating-contact">
+        <a href="mailto:luca@arredoweb.com" class="pill-button">
+            <i class="fas fa-envelope"></i>
+            <span>Contattaci</span>
+        </a>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
